src/stylesheets/components/_project.scss
//
// Project
// --------------------------------------------------

#project {
  height: 100%;
  overflow: hidden;
}

.project-drop-zone {
  height: 100%;
}

#project-view {
  display: flex;
  height: 100%;
  position: relative;
  left: 0;
  z-index: $zindex-project;

  &::after {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: $project-darken-color;
    opacity: 0;
  }

  .project-mode-leave &,
  .project-mode-enter & {
    transition: left $mode-transition;

    &::after {
      content: "";
      transition: opacity $mode-transition;
    }
  }

  .item-mode &,
  .project-mode-leave-active & {
    left: -25%;

    &::after {
      opacity: 1;
    }
  }

  .project-mode-enter-active & {
    left: 0;

    &::after {
      opacity: 0;
    }
  }
}

main {
  display: flex;
  flex: 1 1 0;
}

